--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.16",
+    "axios": "^1.6.5",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
-    "next": "14.0.4",
+    "next": "^14.0.4",
     "postcss": "8.4.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
